<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CartActivity">
    <include layout="@layout/custom_toolbar_cart"/>


    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="450dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_offers_admin"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="match_parent" />

        </LinearLayout>
    </ScrollView>

            <androidx.cardview.widget.CardView
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:background="#FFFFFF">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_subt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tv_sub"
                        android:textColor="#373b54"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_subPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_subPrice"
                        android:textColor="#373b54"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_discount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tv_discount"
                        android:textColor="#373b54"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_disPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_disPrice"
                        android:textColor="#373b54"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_total"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tv_total"
                        android:textColor="#373b54"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_tPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_tPrice"
                        android:textColor="#373b54"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_checkout"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="119dp"
                    android:background="@drawable/custom_button"
                    android:gravity="center"
                    android:text="@string/btn_checkout"
                    android:textSize="18sp"
                    app:backgroundTint="@null" />

            </androidx.cardview.widget.CardView>


        </LinearLayout>

