<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp">


    <androidx.cardview.widget.CardView
        app:cardElevation="20dp"
        app:cardCornerRadius="15dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="15dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/taddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                />


            <TextView
                android:id="@+id/tConNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:text="@string/contact_number"
                android:textSize="18sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>