<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Contact_Us">

  <EditText
      android:id="@+id/et_contact_cafe_bean"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="104dp"
      android:layout_marginTop="112dp"
      android:enabled="false"
      android:hint="@string/et_contact_cafe_bean"
      android:padding="10dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.093"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView3" />

  <EditText
      android:id="@+id/et_name"
      android:layout_width="133dp"
      android:layout_height="77dp"
      android:layout_marginTop="64dp"
      android:hint="@string/et_name"
      android:minHeight="48dp"
      android:padding="10dp"

      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView2" />

  <EditText
      android:id="@+id/et_message"
      android:layout_width="133dp"
      android:layout_height="77dp"
      android:layout_marginTop="32dp"
      android:hint="@string/et_message"
      android:minHeight="48dp"
      android:padding="10dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_name" />

  <Button
      android:id="@+id/email_send"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="28dp"
      android:background="#E8400B"
      android:text="Send"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_contact_cafe_bean" />

  <TextView
      android:id="@+id/tv_contact_us"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/tv_contact_us"
      android:textSize="48sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="221dp"
      android:layout_height="236dp"
      android:layout_marginTop="20dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_contact_us"
      app:srcCompat="@drawable/image4" />

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="190dp"
      android:layout_height="112dp"
      android:layout_marginTop="48dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/et_message"
      app:layout_constraintTop_toBottomOf="@+id/imageView2"
      app:srcCompat="@drawable/image3" />


</androidx.constraintlayout.widget.ConstraintLayout>