<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".About_Us">

    <include layout="@layout/custom_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/tv_aboutus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="serif-monospace"
                    android:padding="10dp"
                    android:text="@string/tv_aboutus"
                    android:textColor="#F33E06"
                    android:textSize="25dp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <ImageView
                android:layout_width="305dp"
                android:layout_height="159dp"
                android:background="#E64A19"
                app:srcCompat="@drawable/image0" />

            <TextView
                android:id="@+id/tv_about_cafe_bean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#F36E44"
                android:fontFamily="@font/bowlby_one"
                android:padding="5dp"
                android:text="@string/tv_about_cafe_bean"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_cafebean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:padding="5dp"
                android:text="@string/tv_cafebean"
                android:textColor="@color/black"
                android:textSize="12dp" />




            <TextView
                android:id="@+id/tv_our_coffee_story"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ED6E46"
                android:fontFamily="@font/bowlby_one"
                android:text="@string/tv_our_coffee_story"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:padding="5dp"
                android:text="Cafe Bean is yet another venture from the Sri Lankan entrepreneur Sampath wijethunga. Cafe Bean came into existence mainly because of his addiction to coffee, any workaholic would agree and bear witness to a condition called “Procaffeinating” the tendency to not start anything without a cup of coffee.

Cafe Bean is a startup which was created to cater to the true authentic coffee shop experience, by emphasizing on the high-quality coffee, which we have not compromised whatever the situation we faced. The true reason for the success of Cafe Bean is its work force, some employees being a part of the Java team since its inception, we at Cafe Bean appreciate all employees starting from the security.

With our humble beginnings at Cafe Bean Malabe, throughout these two years Cafe Bean has grown strength to strength expanding our branches to Bambalapitiya, Fort, Barnes Place, Nawala, Nugegoda and Nugegoda welipark with ideas of expanding even further to ensure that a good quality cup of coffee is just within your reach."
                android:textColor="@color/black"
                android:textSize="12dp" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:background="#E64A19"
                app:srcCompat="@drawable/image1" />

            <TextView
                android:id="@+id/tv_cafebean2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:padding="5dp"
                android:text="@string/tv_cafebean2"
                android:textColor="@color/black"
                android:textSize="12dp" />


        </LinearLayout>

    </ScrollView>


</LinearLayout>