<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".additem">

    <ImageView
        android:id="@+id/iv_mainlogo"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:contentDescription="@string/iv_mainlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cafe" />


        <EditText
            android:id="@+id/pt_input_p_name"
            android:layout_width="306dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/edittext"
            android:ems="10"
            android:hint="@string/pt_input_p_name"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_mainlogo" />

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/til_category_select"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"-->
<!--        android:layout_width="139dp"-->
<!--        android:layout_height="52dp"-->
<!--        android:layout_marginTop="28dp"-->
<!--        android:background="@drawable/inputblock"-->
<!--        android:hint="@string/til_category_select"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.209"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/pt_input_p_name" />-->

    <EditText
        android:id="@+id/pt_input_price"
        android:layout_width="306dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/pt_input_price"
        android:inputType="phone"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pt_input_p_name"

        />

    <EditText
        android:id="@+id/pt_input_description"
        android:layout_width="306dp"
        android:layout_height="119dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/pt_input_description"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sp_category" />

    <ImageView
            android:id="@+id/ibtn_uploadimage"
            android:layout_width="79dp"
            android:layout_height="72dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="144dp"
            android:autofillHints="name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pt_input_description"
            app:srcCompat="@drawable/ic_baseline_camera_alt_24"
            tools:ignore="SpeakableTextPresentCheck" />


    <TextView
        android:id="@+id/tv_upload_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/tvuploadimage"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ibtn_uploadimage"
        app:layout_constraintHorizontal_bias="0.674"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pt_input_description" />

    <Button
        android:id="@+id/btn_reset_additem"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginTop="44dp"
        android:hint="@string/btn_reset_additem"
        android:text="Reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_submit_additem"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_upload_image"
        app:layout_constraintVertical_bias="0.575" />

    <Button
        android:id="@+id/btn_submit_additem"
        android:layout_width="151dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="52dp"
        android:hint="@string/btn_submit_additem"
        android:text="Add Item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibtn_uploadimage"
        app:layout_constraintVertical_bias="0.585" />

    <!--    <androidx.cardview.widget.CardView-->
<!--        android:id="@+id/sp_card"-->
<!--        android:layout_width="240dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        app:layout_constraintBottom_toTopOf="@id/pt_input_description"-->
<!--        app:layout_constraintTop_toBottomOf="@id/pt_input_price"-->
<!--        tools:layout_editor_absoluteX="57dp">-->

    <ProgressBar
        android:id="@+id/pb_additem"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibtn_uploadimage" />

    <Spinner
        android:id="@+id/sp_category"
        android:layout_width="306dp"
        android:layout_height="43dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edittext"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintBottom_toTopOf="@id/pt_input_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pt_input_price" />

    <TextView
        android:id="@+id/tv_cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Select Category"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sp_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent" />
    <!--    </androidx.cardview.widget.CardView>-->

</androidx.constraintlayout.widget.ConstraintLayout>